--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-spring.datasource.url=jdbc:sqlserver://localhost:1443;databaseName=UOL_Compasso
-spring.datasource.username=sys_compasso
-spring.datasource.password=sys_compasso
+spring.datasource.url=jdbc:sqlserver://localhost:1443;databaseName=[BANCO_DE_DADOS]
+spring.datasource.username=[USUARIO]
+spring.datasource.password=[SENHA]
 spring.datasource.driverClassName=com.microsoft.sqlserver.jdbc.SQLServerDriver
 spring.jpa.hibernate.dialect=org.hibernate.dialect.SQLServer2012Dialect
 spring.jpa.show-sql=true
